--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,7 @@
 body{
 	background-image: url("contact1.jpg");
-background-size: 100%;
+background-size: cover;
+background-repeat: no-repeat;
 }
 p{
 	font-size: 25px;
